Uploaded files for judging

--- a/017.md
+++ b/017.md
@@ -5,18 +5,19 @@ medium
 # Two withdraw transactions might have a race condition in the same block, one will succeed and the other will fail.
 
 ## Summary
-Two withdraw transactions might have a race condition in the same block, one will succeed and the other will fail. The main reason is that the current implementation of ``ProtectionPoolCycleManager.calculateAndSetPoolCycleState()`` forces an open state to go through a locked state first, before transitioning to another open state, even in the case that the whole cycle has already completed and there is a need to go from an open state DIRECTLY to another open state (without the need to transition to a locked state first).
+There are two edges cases under which ``withdraw()`` is disabled when it is supposed to be enabled: 
+a) when ``_cycleParams.openCycleDuration == _cycleParams.cycleDuration``, that means there is no locked state, it is always open. 
+
+b)  ``_cycleParams.openCycleDuration`` is near ``_cycleParams.cycleDuration``. That means, the open period is long, and the locked period is short. The cron job does not get a chance to be called during the locked period, but the locked period has already passed. 
+
+The root cause for both cases is the same: the ``ProtectionPoolCycle`` state transition machine does not allow a transition from an open state of one cycle to the open state of the next cycle directly without going through a locked state first. This occurs even when the locked period has already passed.  
 
 ## Vulnerability Detail
-In the following, we analyze why two withdraw transactions might have a race condition in the same block, which is not supposed to be. 
+In the following, we show when the ``withdraw()`` function might fail even though it should not have.  
 
-1) Suppose each cycle is 7 days, thus, ``cycleDuration = 7 days``, and ``openCycleDuration = 7 days``. Suppose ``currentCycleIndex = 100``, and we are in day 2, therefore, we have ``currentCycleState = ProtectionPoolCycleState.Open``.
+1) Suppose ``cycleDuration = 7 days``, and ``openCycleDuration = 6.9 days``. Suppose the cron job is called each noon to transition the states. As a result, the cron job will fail to transition the pool state to the locked state in the last day. It has to wait until noon of day 8 to do that. We were hoping ``withdraw()`` will do the transition as well, but it will fail to do that for this case. 
 
-2) Suppose 6 days passed and nobody calls ``calculateAndSetPoolCycleState()`` in these 6 days. Now we are in day 8. Therefore,  we still have ``currentCycleState = ProtectionPoolCycleState.Open``. 
-
-3) We have two withdraw transactions coming on the same block. We will see that the first withdraw (``withdraw1``) will always fail and the second withdraw (``withdraw2``) will succeed (assume everything else is OK). 
-
-4) The ``withdraw()`` function will call the modifier ``whenPoolIsOpen()``, which calls ``poolCycleManager.calculateAndSetPoolCycleState(address(this)`` to transition the state of the protection pool when necessary. 
+2) In the morning of day 8, although the whole cycle has finished, and the state is supposed to be an open state, the ``withdraw()`` function  will still fail. Because the ``withdraw()`` function  calls the modifier ``whenPoolIsOpen()``, which calls ``poolCycleManager.calculateAndSetPoolCycleState(address(this)`` to transition the state of the protection pool when necessary. 
 
 ```javascript
 function withdraw(uint256 _sTokenWithdrawalAmount, address _receiver)
@@ -81,8 +82,13 @@ modifier whenPoolIsOpen() {
   }
 ```
 
-5) However, as one can see, since the pool is in ``open`` state, although 6 days passed and the state should transition directly o another ``open`` state, due to the state transition machine design, the state has to go through the ``locked`` state first after the first call of ``poolCycleManager.calculateAndSetPoolCycleState(address(this)``, and then transition to ``open`` state in the next call of ``poolCycleManager.calculateAndSetPoolCycleState(address(this)``. Therefore, withdraw1 will fail due to the state is in ``locked`` state, and then ``withdraw2`` will succeed since the state is now in ``open`` state, although they are both in the same block. 
-This should not be the case. A redesign of the state transition machine is necessary: when the whole cycle has already completed, a state should be able to transit from an open state to another open state of the new cycle. 
+5) Unfortunately, although  in the morning of day 8, we hope ``withdraw()`` will succeed by transitioning the state from the ``open`` state of the previous cycle to the ``open`` state of the new cycle, ``withdraw()`` will fail. This is because  in its current design, the state is forced to go through a ``locked`` state first before transitioning to another ``open`` state, even though the locked period has already passed. ``withdraw()``'s modifier ``whenPoolIsOpen`` will call  ``poolCycleManager.calculateAndSetPoolCycleState(address(this)`` and transition the state to the locked state, but then ``whenPoolIsOpen``  will revert after the transition reaches a locked state. As a result, ``withdraw`` will revert and no transition will occur. As a matter of factor, ``withdraw()`` will always fail the whole morning until the cron job is called to transition the state to a locked state first.  ``withdraw()``'s modifier ``whenPoolIsOpen`` does not have the capability to transition the state from an open state to a locked state, as it will always fail in this case. 
+
+
+The case of  ``_cycleParams.openCycleDuration == _cycleParams.cycleDuration`` is similar: even though the intention is for the pool to be always open for withdraw, in the morning of day 8, ``withdraw()`` will still fail because it needs to wait for the noon cron job to bring the state to the locked state first before it can enter a new open state of the following cycle. Again,  ``withdraw()``'s modifier ``whenPoolIsOpen`` does not have the capability to transition the state from an open state to a locked state, as it will always fail in this case. 
+
+ 
+This should not be the case. A redesign of the state transition machine is necessary: when the whole cycle has already completed, a state should be able to transit from an open state to another open state of the new cycle without having to going though a locked state in this case - since the locked period has already passed!
 
 [https://github.com/sherlock-audit/2023-02-carapace/blob/main/contracts/core/ProtectionPoolCycleManager.sol#L94-L143](https://github.com/sherlock-audit/2023-02-carapace/blob/main/contracts/core/ProtectionPoolCycleManager.sol#L94-L143)
 
@@ -90,8 +96,7 @@ This should not be the case. A redesign of the state transition machine is neces
 
 
 ## Impact
-Two withdraw transactions might have a race condition in the same block, one will succeed and the other will fail. So the fairness property is compromised. 
-
+The current state transition machine of ``ProtectionPoolCycle`` cannot not transition from an open state to the open state of the next cycle directly, as a result, withdraw will fail even during the periods that are supposed to be open: a) when we want a pool to be always open; 2) when the locked period is short and it has already passed but the cron job is not called during that period. 
 
 ## Code Snippet
 See above
@@ -102,7 +107,8 @@ VSCode
 Manual Review
 
 ## Recommendation
-We revise the state transition machine to allow the transition from ``open`` to ``open`` when it fits. 
+We revise the state transition machine to allow the transition from ``open`` to ``open`` when the locked period has already passed (ZERO locked period is just a special case that is taken care of automatically): 
+
 ```diff
 function calculateAndSetPoolCycleState(address _protectionPoolAddress)
     external
