Uploaded files for judging

--- a/017.md
+++ b/017.md
@@ -2,7 +2,7 @@ chaduke
 
 medium
 
-# Two withdraw transactions might have a race condition in the same block, one will succeed and the other will fail.
+# Withdraw transactions might fail during periods when they are supposed to be open for withdrawal.
 
 ## Summary
 There are two edges cases under which ``withdraw()`` is disabled when it is supposed to be enabled: 
