--- a/019.md
+++ b/019.md
@@ -5,7 +5,7 @@ medium
 # DOS attack to function ``_accruePremiumAndExpireProtections()`` due to iteration through all active protections.
 
 ## Summary
-DOS attack to function ``_accruePremiumAndExpireProtections()`` due to iteration through all active protections. 
+DOS attack to function ``_accruePremiumAndExpireProtections()`` due to iteration through all active protections. Similar DOS attack can be launched to ``getAllProtections()`` as well.
 
 ## Vulnerability Detail
 We show how a DOS attack to ``_accruePremiumAndExpireProtections()`` is possible: 
