--- a/025.md
+++ b/025.md
@@ -7,6 +7,9 @@ medium
 ## Summary
 When ``lockCapital()`` gets executed, the ``exchangeRate`` - underlying tokens/share, will dramatically decreased. A user, however, can front-run ``lockCapital()`` to withdraw the underling tokens with the higher rate before the execution of ``lockCapital()``, and thus gaining advantage over their peers who have not done so. 
 
+To be precise, one needs to front-run ``assessStates()`` due to the following call-chain: 
+``assessStates() -> _assessState() -> _moveFromActiveToLockedState() -> _protectionPool.lockCapital()``, but we will say we front-run ``lockCapital()`` to make our discussion easier. 
+
 ## Vulnerability Detail
 Below, we compare two users, Alice and Bob: Alice will front-run ``lockCapital()`` and withdraw her asset with the ``exchangeRate`` before the execution of  ``lockCapital()``, and Bob, on the other hand, will withdraw his shares after execution of ``lockCapital()``. The results of Alice and Bob are totally different. 
 
