Uploaded files for judging

--- a/021.md
+++ b/021.md
@@ -2,13 +2,13 @@ Koolex
 
 high
 
-# Lack of check of emergency shutdown of Goldfinch's lending pools in Carapace protocol
+# Lack of check of emergency shutdown (or pause) of Goldfinch's lending pools in Carapace protocol
 
 ## Summary
 Lack of check of emergency shutdown of Goldfinch's lending pools in Carapace protocol
 
 ## Vulnerability Detail
-When getting a lending pool status, Carapace doesn't check if the pool is  shutdown due to emergency in Goldfinch.
+When getting a lending pool status, Carapace doesn't check if the pool is  shutdown or paused due to emergency in Goldfinch.
 
 `ReferenceLendingPools._getLendingPoolStatus` is an internal function called when adding a lending pool or assessing its state.
 The function check the status by calling multiple functions of **GoldfinchAdapter** to return one of the following statuses:
@@ -59,11 +59,13 @@ When a lending pool is shutdown in Goldfinch,
  `(_termEndTimestamp > 0 && _creditLine.balance() == 0)` condition normally will be true if the pool is shutdown. However, this can be bypassed by sending any amount of USDC (e.g.1 USDC) directly to the creditline. 
  This means if a pool is shutdown and **termEndTimestamp** is still in future, it will never be considered as expired in Carapace protocol till **termEndTimestamp** becomes in the past.
 
-
 ## Impact
+
 - A lending pool that's shutdown by Goldfinch is still not expired in Carapace.
-- It is **possible to buy or renew protection** for a lending pool that's shutdown.
+- It is **possible to buy or renew protection** for a lending pool that's shutdown or paused.
 - **Wrong assessment of the state** in DefaultStateManager and ReferenceLendingPools.
+
+
 
 ## Code Snippet
 ### Carapace
@@ -110,4 +112,18 @@ https://github.com/goldfinch-eng/mono/blob/bd9adae6fbd810d1ebb5f7ef22df5bb6f1eae
 Manual Review
 
 ## Recommendation
-In `GoldfinchAdapter.isLendingPoolExpired`, check if the pool is paused, if yes, always consider it expired regardless of any other checks.
+
+### In short
+In `GoldfinchAdapter.isLendingPoolExpired`, check if the pool is paused, if yes, always mark it as expired regardless of any other checks.
+
+### Details
+It's worth mentioning that a lending pool in Goldfinch can still be paused without emeregency shutdown. In this case you have two possibilities:
+1. Go with the simple solution and always mark the pool as **expired if it is paused** regardless of the reason. 
+	- **Ups** => **Simple** to implement.
+	- **Downs** => There is a trust factor involved as you are completly relying on Goldfinch's lending pool admin. If the DefaultStateManager happen to assess the pool during the time where it was temporarily paused (even for a short time), then the pool gets **expired** in Carapace protocol and it will never be active again.
+
+
+2. **Track for how long** the lending pool stayed paused. If it is **reasonably long enough to consider it expired** (e.g 48 hours). Then mark it as expired since there should be no reason to pause a lending pool for long other than an emergency shutdown or something went really wrong.
+	- **Ups** => More reliability and you minimise the risk of relying completely  on the Goldfinch's lending pool admin.
+	- **Downs** => **Not simple** to implement as the one above.
+ 
