--- a/026.md
+++ b/026.md
@@ -74,7 +74,7 @@ VScode
 Manual Review
 
 ## Recommendation
-- Create a new contract as a temporary place to store the accrued premium, and then deliver it to the ``ProtectionPool`` with a constant vesting speed to lower the incentive of a quick profit by sandwich attack. 
+- Create a new contract as a temporary place to store the accrued premium, and then deliver it to the ``ProtectionPool`` over a period of time (delivery period) with some ``premiumPerSecond``  to lower the incentive of a quick profit by sandwich attack. 
 - Restrict the maximum deposit amount for each cycle. 
 - Restrict the maximum withdraw amount for each cycle.
 
