Uploaded files for judging

--- a/034.md
+++ b/034.md
@@ -9,7 +9,7 @@ high
 ## Vulnerability Detail
 In the current protocol, robot will periodically call method DefaultStateManager.assessStates to change the lendingPool state, while executing such actions as lock capital or unlock , etc.
 
-The logic for the state transfer is in _assessState() 
+The logic for the state transition is in _assessState() 
 it will change Status based on the previous Status of _lendingPool and the current Status of _lendingPool 
  the following code:
 ```solidity
