--- a/042.md
+++ b/042.md
@@ -10,7 +10,7 @@ one protection may be locked multiple times
 Multiple LockCapital() may result in insufficient contract balance, causing other LockCapital() to fail due to insufficient underlying tokens
 
 ## Vulnerability Detail
-The DefaultStateManager._assessState() is used for lendingPool's state transfer and according to the current code implementation, is possible:
+The DefaultStateManager._assessState() is used for lendingPool's state transition and according to the current code implementation, is possible:
 lendingPool State transition Possibly：
 Active->Late->Active->Late
 
