--- a/001.md
+++ b/001.md
@@ -2,20 +2,20 @@ dec3ntraliz3d
 
 medium
 
-# Efficiency issue: Unnecessary storage access.
+# Addressing Duplicate Storage Access in `ReferenceLendingPools` for More Efficient Execution
 
 ## Summary
 
-Duplicate access to storage variable in the assessState() function of ReferenceLendingPools.causes increased gas usage. Recommend updating the code to use memory variable instead of storage variable to reduce costs.
+Duplicate access to a storage variable in the assessState() function of ReferenceLendingPools causes increased gas usage. 
 
 
 ## Vulnerability Detail
 
-The assessState() function of ReferenceLendingPools is used to iterate through all the lending pools and retrieve their statuses. In the loop, a memory variable is used to copy the value of the storage variable, but it is not used in the subsequent call instead same storage variable is called again. This may be an oversight from the developer and should be addressed. 
+The assessState() function of `ReferenceLendingPools` is used to iterate through all the lending pools and retrieve their statuses. In the loop, a memory variable is used to copy the value of the storage variable, but it is not used in the subsequent call. Instead, the same storage variable is called again. This may be an oversight from the developer and should be addressed.
 
 ## Impact
 
-Medium
+Medium. 
 
 ## Code Snippet
 
