Uploaded files for judging

--- a/049.md
+++ b/049.md
@@ -20,7 +20,7 @@ And `_assessState` is being called on these conditions;
 
 However, if any pool is late and since the pool status is not changed from Active or LateWithinGracePeriod -> Late without calling `_assessState` , it's possible that the users can still claim their capital via `ProtectionPool`'s `claimUnlockedCapital`.
 
-And `_moveFromActiveToLockedState` is only called by  `_assessState` and the system relies on the CronJob to assess the states which might fail as there is no guarantee of a possible downtime.
+And `_moveFromActiveToLockedState` is only called by  `_assessState` and the system relies on calling a daily cron job or using OZ defender or similar service to assess the states which might also fail as there is no guarantee of a possible server downtime of this third party dependencies.
 
 
 ## Impact
