Uploaded files for judging

--- a/039.md
+++ b/039.md
@@ -40,7 +40,20 @@ code:
 The current implementation is a direct call to getCurrentCycleIndex() 
 CalculateAndSetPoolCycleState() is not called first, so the cycle may be old because the bot maybe has not yet executed the poolCycleManager.calculateAndSetPoolCycleState()
 
-It is recommended to execute calculateAndSetPoolCycleState() first and then execute getCurrentCycleIndex()
+It is recommended:
+execute calculateAndSetPoolCycleState() first and then execute getCurrentCycleIndex()
+or
+cancel calculateAndSetPoolCycleState () trigger mechanism, Calculate the current cycle in real time
+
+Note:
+cycle change for ProtectionPoolCycleManager
+It feels that there is no need to use the bot to trigger the update cycle through calculateAndSetPoolCycleState (). 
+The current cycle and State can be dynamically calculated according to the three determined variables “currentCycleStartTime“, “cycleDuration“, and “block.timestamp“. 
+The calculated gas cost should be acceptable
+
+
+
+
 
 ## Impact
 can withdraw() at 2 cycle
