--- a/072.md
+++ b/072.md
@@ -12,7 +12,7 @@ This function will iterate over [active protection of lending pool](https://gith
 
 Then it will decrease `totalSTokenUnderlying` variable with `_lockedAmount`.
 
-The problem is that on the moment of call, some [protections from array](https://github.com/sherlock-audit/2023-02-carapace/blob/main/contracts/core/pool/ProtectionPool.sol#L386) can already be expired, which means that protection period has ended for them. Also there can be protection that even didn't started yet, so they also should not be covered.
+The problem is that on the moment of call, some [protections from array](https://github.com/sherlock-audit/2023-02-carapace/blob/main/contracts/core/pool/ProtectionPool.sol#L386) can already be expired, which means that protection period has ended for them.
 As result, more underlying tokens are locked then needed and depending on implementation for default state(which is not done yet) this extra funds can be lost.
 ## Impact
 More funds are locked.
