--- a/084.md
+++ b/084.md
@@ -2,15 +2,25 @@ ktg
 
 medium
 
-# Function requestWithdrawal does not update the latest cycleIndex leads to freezing of funds and early withdrawal
+# RequestWithdrawal/Withdraw is not accounted for in leverage ratio calculation
 
 ## Summary
-Currently, function `requestWithdrawal` does not update the latest cycle index; so the actual cycle index could be
-1 cycle later the withdrawal's request index. This can allow malicious users to withdraw their funds early (the open period of next cycle rather than `open period of cycle after next cycle` as specified in the docs), and also if a normal user use normal time to assume his withdrawal time, he can make withdrawal his fund 1 cycle late and then he need to request withdrawal again; in edge cases, this can lead to users fund locked forever since cycle index is not tracked correctly.
+RequestWithdrawal/Withdraw is not accounted for in leverage ratio calculation.
+When a user request a withdrawal, this withdrawal amount is not included in leverage ratio calculation.
+This can lead to the situation when all underlying token in the protection pool is withdrawn but still has active
+protection to cover (meaning there is no money to pay for active protections in case of defaults).
 
 https://github.com/sherlock-audit/2023-02-carapace/blob/main/contracts/core/pool/ProtectionPool.sol#L1061-#L1097
 
 ## Vulnerability Detail
+Currently, to prevent leverage ratio from breaching, the protection pool implement these restrictions (`leverageRatio = totalStokenUnderlying/totalProtection` ):
+- When someone deposits, leverageRatio must be < leverageRatioCeiling 
+- When someone buys/renews protection, leverageRatio must be > leverageRatioFloor
+However, function `requestWithdrawal` and `withdraw` does not account for leverageRatio, this can lead to the situation when all underlying token in the protection pool is withdrawn but still has active. For example:
+
+    - In cycle 1: user1 deposit 100K, enough to get through minRequiredCapital and move to OpenToBuyers phase; he then request withdrawal all his Stoken; so he can actually withdraw token in cycle 3.
+    - In cycle 2: user2 bought protection with end time = end of cycle 3
+    - In cycle 3: user1 withdraw all his token, now protection pool has no underlying token but still has 1 active protection to cover; meaning no money to pay in the event of default.
 
 Here is a POC:
 ```typescript
@@ -46,8 +56,9 @@ import { ZERO_ADDRESS } from "../utils/constants";
 import { getGoldfinchLender1 } from "../utils/goldfinch";
 import { ProtectionPoolV2 } from "../../typechain-types/contracts/test/ProtectionPoolV2";
 import slug = Mocha.utils.slug;
+import {address} from "hardhat/internal/core/config/config-validation";
 
-const testProtectionPoolWitdrawal: Function = (
+const testProtectionPoolLeverageRatio: Function = (
     deployer: Signer,
     owner: Signer,
     buyer: Signer,
@@ -292,78 +303,23 @@ const testProtectionPoolWitdrawal: Function = (
       _lendingPool2 = _goldfinchLendingPools[1];
     });
 
-    describe("...vulnerability in withdrawal demonstration", async () => {
+    describe("...vulnerability: leverage ratio calculation does not account for withdrawal", async () => {
         //
-      const _depositAmount = "40000";
-      const _requestedTokenAmt1 = parseEther("5");
-      const _underlyingAmount: BigNumber = parseUSDC(_depositAmount);
-        describe("...deposit", async () => {
-          it("...1st deposit is successful", async () => {
+      const _depositAmount = "100000"; // 100 K deposit
+        describe("...deposit and withdrawal", async () => {
+          // deployer deposit 120K and he decides to request withdrawal in this cycle
+          it("...deposit and withdrawal", async () => {
             await depositAndVerify(deployer, _depositAmount);
-          });
-          it("...2nd deposit by seller is successful", async () => {
-            await depositAndVerify(seller, _depositAmount);
-          });
-          it("...3rd deposit by account 4 is successful", async () => {
-            await depositAndVerify(account4, _depositAmount);
-          });
-
-          it("...withdrawal", async () => {
-            // Move 11 days - past the open state and lock the cycle
-            await moveForwardTimeByDays(11);
-            await protectionPoolCycleManager.calculateAndSetPoolCycleState(
-                protectionPool.address);
-            expect(await protectionPoolCycleManager.getCurrentCycleState(protectionPool.address)
-            ).to.equal(2); // 2 = Locked
-            expect(await protectionPoolCycleManager.getCurrentCycleIndex(protectionPool.address))
-                .to.eq(0); // index = 0 - cycle 1
-            // Move 20 days , after this, we are now at cycle 2, but the index is still 0,
-            // since we don't update it
-            await moveForwardTimeByDays(20);
-            expect(await protectionPoolCycleManager.getCurrentCycleIndex(protectionPool.address))
-                .to.eq(0); // index = 0 - cycle 1
-
-            // Request withdrawal for deployer and seller
+            const expectedWithdrawalIndex = 2;
+            const withdrawalAmount = parseEther("100000"); // 100K Stoken withdrawal
             await expect(
-                protectionPool
-                    .requestWithdrawal(_requestedTokenAmt1)
-            )
-                .to.emit(protectionPool, "WithdrawalRequested")
+                protectionPool.requestWithdrawal(withdrawalAmount)
+            ).to.emit(protectionPool, "WithdrawalRequested")
                 .withArgs(
                     deployerAddress,
-                    _requestedTokenAmt1,
-                    2 // can withdraw at cycleIndex 2 - cycle 3
+                    withdrawalAmount,
+                    expectedWithdrawalIndex
                 );
-
-            await expect(
-                protectionPool
-                    .connect(seller)
-                    .requestWithdrawal(_requestedTokenAmt1)
-            )
-                .to.emit(protectionPool, "WithdrawalRequested")
-                .withArgs(
-                    sellerAddress,
-                    _requestedTokenAmt1,
-                    2 // can withdraw at cycleIndex 2 - cycle 3
-                );
-
-            /**
-             We are actually at cycle 2, currently, according to the doc:
-             Actual withdrawal is allowed in open period of cycle after next cycle
-             For example: if request is made in at some time in cycle 1,
-             then withdrawal is allowed in open period of cycle 3
-             So if request is made at some time in cycle 2,
-             then user can withdraw at cycle 4, however, the following test case
-             show that user can only withdraw at cycle 3
-             */
-
-            await protectionPoolCycleManager.calculateAndSetPoolCycleState(
-                protectionPool.address);
-            expect(await protectionPoolCycleManager.getCurrentCycleState(protectionPool.address)
-            ).to.equal(1); // 1 = Open
-            expect(await protectionPoolCycleManager.getCurrentCycleIndex(protectionPool.address))
-                .to.eq(1); // index = 1 - cycle 2
-
 
             // Move 11 days - past the open state and lock the cycle
             await moveForwardTimeByDays(11);
@@ -371,71 +327,113 @@ const testProtectionPoolWitdrawal: Function = (
                 protectionPool.address);
             expect(await protectionPoolCycleManager.getCurrentCycleState(protectionPool.address)
             ).to.equal(2); // 2 = Locked
-            expect(await protectionPoolCycleManager.getCurrentCycleIndex(protectionPool.address))
-                .to.eq(1); // index = 1 - cycle 2
-            // Move 20 days to cycle 3
+
+
+            // Move 20 days to cycle 2, and move phase to OpenToBuyers
             await moveForwardTimeByDays(20);
             await protectionPoolCycleManager.calculateAndSetPoolCycleState(
-                protectionPool.address);
-            expect(await protectionPoolCycleManager.getCurrentCycleState(protectionPool.address)
-            ).to.equal(1); // 1 = Open
-            expect(await protectionPoolCycleManager.getCurrentCycleIndex(protectionPool.address))
-                .to.eq(2); // index = 2 - cycle 3
-
-
-            // Deployer can withdraw now
-            await expect(
-                protectionPool
-                    .withdraw(_requestedTokenAmt1, deployerAddress)
-
-            ).to.emit(protectionPool, "WithdrawalMade")
-                .withArgs(deployerAddress, _requestedTokenAmt1, deployerAddress);
-
-
-
-            // Move 11 days - past the open state and lock the cycle
-            await moveForwardTimeByDays(11);
-            await protectionPoolCycleManager.calculateAndSetPoolCycleState(
-                protectionPool.address);
-            expect(await protectionPoolCycleManager.getCurrentCycleState(protectionPool.address)
-            ).to.equal(2); // 2 = Locked
-            expect(await protectionPoolCycleManager.getCurrentCycleIndex(protectionPool.address))
-                .to.eq(2); // index = 2 - cycle 3
-            // Move 20 days to cycle 4
-            await moveForwardTimeByDays(20);
-            await protectionPoolCycleManager.calculateAndSetPoolCycleState(
-                protectionPool.address);
-            expect(await protectionPoolCycleManager.getCurrentCycleState(protectionPool.address)
-            ).to.equal(1); // 1 = Open
-            expect(await protectionPoolCycleManager.getCurrentCycleIndex(protectionPool.address))
-                .to.eq(3); // index = 3 - cycle 4
-
-
-            // If seller keep assume that he can only withdraw in cycle 4,
-            // then he can't withdraw
-            await expect(
-                protectionPool.connect(seller)
-                    .withdraw(_requestedTokenAmt1, deployerAddress)
-            ).to.be.revertedWith(
-                `NoWithdrawalRequested("${sellerAddress}", ${3})`
+                protectionPool.address
             );
+            expect(await protectionPoolCycleManager.getCurrentCycleState(protectionPool.address)
+            ).to.equal(1); // 1 = Open
+            expect(await protectionPoolCycleManager.getCurrentCycleIndex(protectionPool.address))
+                .to.eq(1); // index = 1 - cycle 2
+            await protectionPool.movePoolPhase();
+            expect((await protectionPool.getPoolInfo()).currentPhase)
+                .to.eq(1); // phase = 1 - OpenToBuyers
+
+            // protectionBuyer1: 420K principal for token 590
+            await transferAndApproveUsdcToPool(
+                _protectionBuyer1,
+                parseUSDC("2500")
+            );
+            const _approvedAmt = parseUSDC("2500");
+            expect(
+                await USDC.connect(_protectionBuyer1).approve(
+                    protectionPool.address,
+                    _approvedAmt
+                )
+            )
+                .to.emit(USDC, "Approval")
+                .withArgs(
+                    PROTECTION_BUYER1_ADDRESS,
+                    protectionPool.address,
+                    _approvedAmt
+                );
+
+            const _protectionAmount = parseUSDC("100000"); // 100K USDC
+            const _initialBuyerAccountId: BigNumber = BigNumber.from(1);
+            let _purchaseParams: ProtectionPurchaseParamsStruct;
+            _purchaseParams = {
+              lendingPoolAddress: _lendingPool2,
+              nftLpTokenId: 590,
+              protectionAmount: _protectionAmount,
+              protectionDurationInSeconds: getDaysInSeconds(40)
+            };
+            expect(
+                await protectionPool
+                    .connect(_protectionBuyer1)
+                    .buyProtection(_purchaseParams, parseUSDC("10000"))
+            )
+                .emit(protectionPool, "PremiumAccrued")
+                .to.emit(protectionPool, "BuyerAccountCreated")
+                .withArgs(PROTECTION_BUYER1_ADDRESS, _initialBuyerAccountId)
+                .to.emit(protectionPool, "CoverageBought")
+                .withArgs(
+                    PROTECTION_BUYER1_ADDRESS,
+                    _lendingPool2,
+                    _protectionAmount
+                );
+
+            // Move 11 days - past the open state and lock the cycle
+            await moveForwardTimeByDays(11);
+            await protectionPoolCycleManager.calculateAndSetPoolCycleState(
+                protectionPool.address);
+            expect(await protectionPoolCycleManager.getCurrentCycleState(protectionPool.address)
+            ).to.equal(2); // 2 = Locked
+
+            // Move 20 days to cycle 3, and move phase to Open
+            await moveForwardTimeByDays(20);
+            await protectionPoolCycleManager.calculateAndSetPoolCycleState(
+                protectionPool.address
+            );
+            expect(await protectionPoolCycleManager.getCurrentCycleState(protectionPool.address)
+            ).to.equal(1); // 1 = Open
+            expect(await protectionPoolCycleManager.getCurrentCycleIndex(protectionPool.address))
+                .to.eq(2); // index = 2 - cycle 3
+            await protectionPool.movePoolPhase();
+            expect((await protectionPool.getPoolInfo()).currentPhase)
+                .to.eq(2); // phase = 2 - Open
+
+
+            // deployer withdraw
+            await expect(
+                protectionPool
+                    .withdraw(withdrawalAmount, deployerAddress)
+            )
+                .to.emit(protectionPool, "WithdrawalMade")
+                .withArgs(deployerAddress, withdrawalAmount, deployerAddress);
+
+            // Leverage ratio is now 0
+            expect (await protectionPool.calculateLeverageRatio()).to.eq(0);
+            // But there is still 1 active protection
+            expect(
+                (await protectionPool.getAllProtections()).length
+            ).to.eq(1);
+            const poolDetails = await protectionPool.getPoolDetails();
+            expect(poolDetails[0]).to.eq(0); // totalSTokenUnderlying = 0
+            expect(poolDetails[1]).to.eq(parseUSDC("100000")) // totalProtection = 100K USDC
           });
-
         });
-
     });
-
   });
 };
 
-export { testProtectionPoolWitdrawal };
-
+export { testProtectionPoolLeverageRatio };
 
 ```
 ## Impact
-- Malicious user can withdraw 1 cycle early
-- Users funds are locked, even forever in edge cases 
-
+- Leverage Ratio is breached, protection pool has no money to cover protection
 ## Code Snippet
 ```solidity
 function _requestWithdrawal(uint256 _sTokenAmount) internal {
